--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -29,17 +29,30 @@ jobs:
         with:
           terraform_version: 1.6.6
       
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+      # Authenticate Azure CLI
+      - name: Azure CLI Login
+        run: |
+          az login --service-principal \
+            --username $ARM_CLIENT_ID \
+            --password $ARM_CLIENT_SECRET \
+            --tenant $ARM_TENANT_ID
+          az account set --subscription $ARM_SUBSCRIPTION_ID
+      
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         id: init
         run: terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT" -backend-config="container_name=$CONTAINER_NAME" -backend-config="resource_group_name=$RESOURCE_GROUP"
-    # Run a terraform plan 
+      
+      # Run a terraform plan 
       - name: Terraform Plan
         id: plan
         run: terraform plan -destroy -no-color
+      
+      # Show Terraform State
       - name: Terraform State
         id: State
         run: terraform show
-    # On workflow dispatch build or change infrastructure according to Terraform configuration files
+      
+      # On workflow dispatch, build or change infrastructure according to Terraform configuration files
       - name: Terraform destroy all resources
         run: terraform destroy -auto-approve
