--- a/.github/workflows/terraform_destroy.yml
+++ b/.github/workflows/terraform_destroy.yml
@@ -47,12 +47,11 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan -destroy -no-color
-      
-      # Show Terraform State
-      - name: Terraform State
-        id: State
-        run: terraform show
-      
+
+      # On workflow dispatch, build or change infrastructure according to Terraform configuration files
+      - name: Terraform destroy adme template resources
+        run: terraform destroy -target=null_resource.adme_template -auto-approve
+        
       # On workflow dispatch, build or change infrastructure according to Terraform configuration files
       - name: Terraform destroy all resources
         run: terraform destroy -auto-approve
