--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,7 +41,7 @@ jobs:
       
       # Upload the plan file as an artifact (optional, for debugging or later use)
       - name: Upload Terraform Plan
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3.1.2
         with:
           name: terraform-plan
           path: tfplan
@@ -59,5 +59,16 @@ jobs:
     needs: manual_approval
     runs-on: ubuntu-latest
     steps:
+      # Checkout the repository again to ensure the plan file is available
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+
+      # Install Terraform again for the apply step
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2.0.3
+        with:
+          terraform_version: 1.6.6
+
+      # Apply the saved plan
       - name: Terraform Apply
-        run: terraform apply tfplan
+        run: terraform apply -auto-approve tfplan
