--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
-        uses: actions/checkout@v4.1.1
+        uses: actions/checkout@v4
       
       # Install the preferred version of Terraform CLI
       - name: Setup Terraform
@@ -41,7 +41,7 @@ jobs:
       
       # Upload the plan file as an artifact (optional, for debugging or later use)
       - name: Upload Terraform Plan
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v4
         with:
           name: terraform-plan
           path: tfplan
@@ -61,13 +61,19 @@ jobs:
     steps:
       # Checkout the repository again to ensure the plan file is available
       - name: Checkout
-        uses: actions/checkout@v4.1.1
+        uses: actions/checkout@v4
 
       # Install Terraform again for the apply step
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2.0.3
         with:
           terraform_version: 1.6.6
+
+      # Download the Terraform Plan artifact
+      - name: Download Terraform Plan
+        uses: actions/download-artifact@v4
+        with:
+          name: terraform-plan
 
       # Apply the saved plan
       - name: Terraform Apply
